--- a/tiny_mrp/mrp/templates/mrp/report/daily_tolid_main.html
+++ b/tiny_mrp/mrp/templates/mrp/report/daily_tolid_main.html
@@ -51,7 +51,7 @@
                     data-machine-id="{{c.machine.id}}"
                     multiple="multiple"
                     style="width: 100%;">
-                    {% for i in c.operators %}
+                    {% for i in operator_data %}
                       <option value="{{i.id}}" selected>{{i.name}}</option>
                     {% endfor %}
                     </select>
@@ -106,6 +106,12 @@
                 </div>
                
                 <div class="col-md-3 d-flex justify-content-center align-items-end">
+                    <div class="form-group">
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch1" name="collective">
+                            <label class="custom-control-label" for="customSwitch1">ایجاد گزارش به صورت تجمعی</label>
+                        </div>
+                    </div>
                     <button type="submit" class="btn btn-success">
                         <i class="bi bi-filter-circle"></i> اعمال فیلترها
                     </button>
@@ -121,7 +127,7 @@
         <div class="card summary-card">
             <div class="card-body text-center">
                 <h5 class="card-title">تعداد کل تولید</h5>
-                <h2 class="card-text">{{total_production}}</h2>
+                <h2 class="card-text">0</h2>
                 <p class="card-text">عدد</p>
             </div>
         </div>
@@ -244,7 +250,7 @@
 </div>
 
 <!-- نمودارها -->
-<div class="row mt-4">
+<!-- <div class="row mt-4">
     <div class="col-md-6">
         <div class="card">
             <div class="card-header bg-info text-white">
@@ -265,7 +271,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 
