--- a/tiny_mrp/mrp/templates/mrp/report/daily_tolid_main.html
+++ b/tiny_mrp/mrp/templates/mrp/report/daily_tolid_main.html
@@ -174,7 +174,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for i in report_data %}
+                    {% for i in page_obj %}
                     <tr>
                         <td>{{i.date}}</td>
                         <td>{{i.operator}}</td>
