--- a/tiny_mrp/mrp/templates/mrp/report/daily_tolid_main.html
+++ b/tiny_mrp/mrp/templates/mrp/report/daily_tolid_main.html
@@ -56,7 +56,7 @@
                     {% endfor %}
                     </select>
                     <!-- Single hidden field to store all operator data as JSON -->
-                    <input type="hidden" class="operator-data" name="operator_data" value="{{c.operators_json}}" id="operator_data">
+                    <input type="hidden" class="operator-data" name="operator_data" value="{{operators_id}}" id="operator_data">
                 </div>
                 <div class="col-md-3">
                     <label for="startDate" class="form-label">تاریخ شروع</label>
