--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -315,18 +315,18 @@
     <ul>
       <li class="navigation-divider">گزارشات</li>
     <li>
-      <a href="{% url 'daily_tolid_with_chart' %}">
-        <span>نمودار میله ای روزانه تولید</span>
+      <a href="{% url 'daily_tolid_main' %}">
+        <span>گزارش</span>
 
       </a>
     </li>
-    <li>
+    <!-- <li>
       <a href="{% url 'list_report' %}">
         <span>گزارشات</span>
 
 
       </a>
-    </li>
+    </li> -->
   </ul>
 
   </div>
