--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -320,6 +320,12 @@
 
       </a>
     </li>
+    <li>
+      <a href="{% url 'graph_index' %}">
+        <span>گراف سفارش</span>
+
+      </a>
+    </li>
     <!-- <li>
       <a href="{% url 'list_report' %}">
         <span>گزارشات</span>
