--- a/tiny_mrp/mrp/templates/mrp/graph/index.html
+++ b/tiny_mrp/mrp/templates/mrp/graph/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>برد برنامه ریزی خرید</title>
+    <title>{{title}}</title>
    
       <!-- Favicon -->
   <link rel="shortcut icon" href="{% static 'assets/media/image/favicon.png' %}"/>
