--- a/tiny_mrp/mrp/templates/mrp/report/daily_tolid_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/report/daily_tolid_v2.html
@@ -28,10 +28,24 @@
         display: none !important;
     }
 }
-.table td, .table th {
+.table1 td, .table th {
     font-weight: bold !important;
     text
 }
+
+
+
+/* بولد کردن فقط سطر آخر */
+/* .mytable2 tr:last-child {
+  font-weight: bold !important;
+} */
+
+.table2 tr:last-child td {
+  font-weight: bold !important;
+}
+
+
+
 
 </style>
 
@@ -80,7 +94,7 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="table-responsive mytable" style="overflow: hidden; outline: none;" tabindex="1">
-                                <table class="table table-striped table-bordered" id="productionTable">
+                                <table class="table table1  table-striped table-bordered" id="productionTable">
                                     <thead>
                                     <tr id="machineNames">
                                         
@@ -109,7 +123,7 @@
                             
 
                             <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="1">
-                                <table class="table table-striped table-bordered" id="productionTable2">
+                                <table class="table table2 table-striped table-bordered" id="productionTable2">
                                     
                                 </table>
                             </div>
