--- a/tiny_mrp/mrp/templates/mrp/report/daily_tolid_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/report/daily_tolid_v2.html
@@ -6,7 +6,10 @@
   table-layout: fixed;
   width: 100% !important;
 }
+
 .mytable td, .mytable th {
+  border: 2px solid #000 !important;
+
   width: 10px !important;  /* Reduced from 150px */
   height: 50px !important;   /* Reduced from 75px */
   max-width: 10px !important;
@@ -18,6 +21,9 @@
   word-wrap: break-word;         /* Break long words if necessary */
   white-space: normal !important;/* Allow text to wrap */
   overflow-wrap: break-word;     /* Ensures text breaks properly */
+}
+table{
+    text-align: center;
 }
 
 @media print {
@@ -40,11 +46,18 @@
   font-weight: bold !important;
 } */
 
-.table2 tr:last-child td {
+.table2 tr:last-child {
   font-weight: bold !important;
 }
 
-
+.table2 tr td  {
+  border: 2px solid #000 !important;
+  border-width: 2px !important;
+}
+.table2 tr th  {
+  border: 2px solid #000 !important;
+  border-width: 2px !important;
+}
 
 
 </style>
